# c_base

./: CBase Design Manual.docx  README.md
c_base/: CBase Design Manual.docx  README.md
c_base/build_tech/: Build Tech Overview.docx
c_base/build_tech/CMake_Resources/: Get.sh
c_base/build_tech/Conan/workingdir/: --conan-io--.github--62681  --conan-io--cci-sources-backup--62686  --conan-io--cmake-conan--62694  --conan-io--cmake-training--62699  --conan-io--code-of-conduct--62704  --conan-io--conan--62709  --conan-io--conan-center-index--62714  --conan-io--conan-clion-plugin--62725  --conan-io--conan-docker-tools--62730  --conan-io--conan-extensions--62735  --conan-io--conanclientcert--62761  (+20 more)
c_base/docs/: valgrind2003-talk.ps  valgrind_manual.html.tar.bz2
c_base/important_libs/: Important Libs Overview.docx  README.md  run_config.sh
c_base/important_libs/GNU/: INSTALL_List.txt
c_base/important_libs/dot_git/: FETCH_HEAD  config  index  packed-refs
c_base/important_libs/workingdir/: --Rust-GCC--Reporting--89406  --Rust-GCC--Rust-GCC.github.io--89411  --Rust-GCC--bottleboard--89417  --Rust-GCC--cargo-gccrs--89422  --Rust-GCC--gccrs--89427  --Rust-GCC--testing--89569
c_base/src2/: README.md
c_base/src2/include/: cbarray.h  cbcconsts.h  cbdata.h  cbmath_algebra.h  cbstring.h  cbstring_regex.h
c_base/src2/src/: cbcore_memory.c  cbmath_core.c  cbstring.c
c_base/src2/test/: compile_run.sh
docs/: CBase Design.docx
src-apps/orbitals/: README.md  Use Python to Create Two-Body Orbits _ by Zack Fizell _ Towards Data Science.html
src-apps/orbitals/Use Python to Create Two-Body Orbits _ by Zack Fizell _ Towards Data Science_files/: 923.f5e3d4bf.chunk.js  js  main.985d6acf.js  manifest.d45e39bb.js
src/stdlib/: lib_files.md
src/stdlib/C2011/: threads.h  touch.sh
src/stdlib/C89/: assert.h  ctype.h  errno.h  limits.h  math.h  setjmp.h  stdarg.h  stddef.h  stdlib.h  touch.sh
src/stdlib/C95/: iso646.h  touch.sh
src/stdlib/C99/: complex.h  fenv.h  stdbool.h  stdint.h
src/stdlib/_base/: string.h
src2/: CMakeLists.txt
src2/include/: cbase.h  cbcore.h  cbcore_memory.h  cbmath_core.h  cbsort.h  cbstring.h
src2/src/: cbstring.c
src2/test/: test_cbase.c  test_cbcore_memory.c  test_cbmath_core.c  test_cbstring.c
(+1744 files in other folders)
